--- a/client/app/Footer/Footer.css
+++ b/client/app/Footer/Footer.css
@@ -2,7 +2,7 @@
   text-align: center;
   padding: 56px 0;
   background-size: cover;
-  background: #eee url('../header-bk.png') center;  
+  /* background: #eee url('../header-bk.png') center;   */
 }
 
 .footer p{
